--- a/style.css
+++ b/style.css
@@ -2,14 +2,16 @@
     box-sizing: border-box;
 }
 
+.container {
+    height: 100vh;
+}
+
 .notice {
     width: 220px;
     height: 120px;
     padding: 10px;
     background-color: tomato;
     position: absolute;
-    top: 50%;
-    left: 50%;
     transform: translateY(-50%) translateX(-50%);
     display: flex;
     justify-content: center;
