--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ html, body {
     min-height: calc(1.2em * 4);
     padding: 10px;
     background-color: tomato;
+    border: 1px solid black;
     border-radius: 10%;
     cursor: pointer;
     font-size: 28px;
