--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
 
 .noticeWrapper {
 	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .notice {
@@ -21,7 +24,7 @@ body {
 	line-height: 1.2;
 	min-height: calc(1.2em * 4);
 	padding: 10px;
-	background-color: tomato;
+	background-color: indianred;
 	border: 1px solid black;
 	border-radius: 10%;
 	cursor: pointer;
