--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 
 html,
 body {
+	margin: 0;
+	padding: 0;
 	overflow: hidden;
 }
 
@@ -17,6 +19,23 @@ body {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+
+.delBtn {
+	position: absolute;
+	bottom: -25px;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 120px;
+	height: 30px;
+	display: block;
+}
+
+.container {
+	background: papayawhip;
+	height: 100vh;
+	width: 100hv;
+	position: relative;
 }
 
 .notice {
