--- a/style.css
+++ b/style.css
@@ -16,9 +16,7 @@ body {
 
 .noticeWrapper {
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	/* transform: translate(-50%, -50%); */
 }
 
 .delBtn {
